// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cookiebotUtils getConsentScripts returns the Cookiebot script element 1`] = `
<div>
  <div>
    <script
      data-blockingmode="auto"
      data-cbid="123-abc"
      id="Cookiebot"
      src="https://consent.cookiebot.com/uc.js"
      type="text/javascript"
    />
  </div>
</div>
`;

exports[`cookiebotUtils getCookieScripts returns a script element 1`] = `
<div>
  <div>
    <script
      data-cookieconsent="statistics"
      type="text/plain"
    />
  </div>
</div>
`;
